# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  C4-Architecture-diagram.drawio  Dockerfile  README.md  TodoApp-C4-context  Vagrantfile  deploy.sh~  docker-compose.yml  pyproject.toml
todo_app/: .gitignore  README.md  app.py  app_config.py  check.py  useradminviewmodel.py  viewmodel.py
todo_app/data/: boardelements.py  item.py  session_items.py  todoapi.py  todomapper.py  trelloapicaller.py  user.py  userdb.py
todo_app/templates/: index.html  layout.html  table_macro.html  useradmin.html
todo_app/tests/: mock_responses.py  test_app.py  test_requests.py  test_view_model.py
todo_app/tests_e2e/: test_e2e.py
