[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
astroid = "2.3.3"
atomicwrites = "1.1.5"
attrs = "19.3.0"
beautifulsoup4 = "4.8.2"
blinker = "1.4"
certifi = "2019.11.28"
chardet = "3.0.4"
click = "7.0"
colorama = "0.4.3"
configobj = "5.0.6"
cryptography = "2.8"
Cycler = "0.10.0"
decorator = "4.4.2"
distro = "1.4.0"
entrypoints = "0.3"
Flask = "1.1.2"
httplib2 = "0.14.0"
idna = "2.8"
ifaddr = "0.1.6"
importlib-metadata = "1.5.0"
iniparse = "0.4"
isort = "4.3.4"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
joblib = "0.16.0"
keyring = "18.0.1"
kiwisolver = "1.0.1"
launchpadlib = "1.10.13"
"lazr.restfulclient" = "0.14.2"
"lazr.uri" = "1.0.3"
lazy-object-proxy = "1.4.3"
logilab-common = "1.4.3"
lxml = "4.5.0"
Mako = "1.1.0"
MarkupSafe = "1.1.0"
matplotlib = "3.1.2"
mccabe = "0.6.1"
more-itertools = "4.2.0"
netifaces = "0.10.4"
nose = "1.3.7"
numpy = "1.17.4"
oauthlib = "3.1.0"
packaging = "20.3"
pexpect = "4.6.0"
Pillow = "7.0.0"
pluggy = "0.13.0"
protobuf = "3.6.1"
psutil = "5.5.1"
py = "1.8.1"
pycrypto = "2.6.1"
Pygments = "2.3.1"
PyJWT = "1.7.1"
pylint = "2.4.4"
PyNaCl = "1.3.0"
pyparsing = "2.4.6"
pytest = "4.6.9"
python-dateutil = "2.7.3"
python-xlib = "0.23"
pyxdg = "0.26"
PyYAML = "5.3.1"
reportlab = "3.5.34"
requests = "2.22.0"
requests-unixsocket = "0.2.0"
scikit-learn = "0.23.2"
scipy = "1.3.3"
SecretStorage = "2.3.1"
setproctitle = "1.1.10"
simplejson = "3.16.0"
six = "1.14.0"
soupsieve = "1.9.5"
threadpoolctl = "2.1.0"
Unidecode = "1.1.1"
urllib3 = "1.25.8"
wadllib = "1.3.3"
wcwidth = "0.1.8"
Werkzeug = "1.0.1"
wrapt = "1.11.2"
zeroconf = "0.24.4"
zipp = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
